crates/rivora-receipts/tests/snapshots/golden_tests__golden_observation_receipt_json.snap
---
source: crates/rivora-receipts/tests/golden_tests.rs
expression: output
---
{
  "confidence": {
    "contributing_factors": [],
    "level": "low",
    "limiting_factors": [],
    "method": "observation-threshold-v1",
    "score": 0.3,
    "uncertainty": "Single observation; no historical comparison available"
  },
  "evidence": [
    {
      "confidence_contribution": 0.3,
      "description": "Error rate for api-gateway exceeded 2% for 3 consecutive minutes",
      "kind": "observation",
      "metadata": null,
      "observed_at": "2026-06-25T12:00:00Z",
      "raw_ref": null,
      "source": {
        "provider": "aws",
        "version": "0.1.0"
      },
      "title": "Error rate anomaly"
    }
  ],
  "id": "receipt_fixture_observation_1",
  "kind": "observation",
  "metadata": {
    "labels": {},
    "tags": []
  },
  "provenance": {
    "ability": null,
    "inference": null,
    "source": "adaptive-engine",
    "source_version": "0.1.0"
  },
  "reasoning": [
    {
      "confidence_impact": 0.2,
      "explanation": "Error rate crossed the 2% threshold for 3 consecutive minutes",
      "input_evidence": [],
      "output_conclusion": "Anomaly confirmed; root cause unknown",
      "step": 1,
      "title": "Detect anomaly"
    }
  ],
  "risk": {
    "affected_services": [],
    "description": "Observation only; no action proposed",
    "level": "low",
    "mitigations": [],
    "possible_impacts": [],
    "requires_approval": false
  },
  "status": "draft",
  "subject": {
    "display_name": "api-gateway",
    "kind": "service",
    "reference": "svc-api-gateway"
  },
  "suggested_actions": [],
  "summary": {
    "description": "Error rate exceeded 2% threshold on api-gateway",
    "title": "Error rate anomaly detected"
  },
  "timestamps": {
    "created_at": "2026-06-25T12:00:00Z",
    "expires_at": null,
    "updated_at": null
  },
  "version": {
    "api": null,
    "schema": "1.0.0"
  }
}
